<?xml version="1.0" encoding="utf-8"?><?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|bottom"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">


            <Button
                android:id="@+id/buttonAC"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/ac"
                android:textColor="@color/orange"
                android:textSize="@dimen/key_text_size" />

            <ImageButton
                android:id="@+id/del"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_delete"
                android:text="@string/button8"
                android:textSize="@dimen/key_text_size" />

            <Button
                android:id="@+id/buttonProc"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="%"
                android:textColor="@color/orange"
                android:textSize="@dimen/key_text_size" />

            <Button
                android:id="@+id/division"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="/"
                android:textColor="@color/orange" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">


            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button7"
                android:textColor="@color/black"
                android:textSize="@dimen/key_text_size" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button8"
                android:textColor="@color/black"
                android:textSize="@dimen/key_text_size" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button9"
                android:textColor="@color/black"
                android:textSize="@dimen/key_text_size" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/multiplication"
                android:textColor="@color/orange" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button4"
                android:textColor="@color/black"
                android:textSize="@dimen/key_text_size" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button5"
                android:textColor="@color/black"
                android:textSize="@dimen/key_text_size" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button6"
                android:textColor="@color/black"
                android:textSize="@dimen/key_text_size" />

            <Button
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/minus"
                android:textColor="@color/orange"
                android:textSize="@dimen/key_text_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button1"
                android:textColor="@color/black"
                android:textSize="@dimen/key_text_size" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button2"
                android:textColor="@color/black"
                android:textSize="@dimen/key_text_size" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button3"
                android:textColor="@color/black"
                android:textSize="@dimen/key_text_size" />

            <Button
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="+"
                android:textColor="@color/orange"
                android:textSize="@dimen/key_text_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="8"
                android:background="@android:color/transparent"
                android:text="@string/button0"
                android:textColor="@color/black"
                android:textSize="@dimen/key_text_size" />

            <Button
                android:id="@+id/buttonPt"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/buttonPt"
                android:textColor="@color/black"
                android:textSize="@dimen/key_text_size" />

            <Button
                android:id="@+id/buttonEqually"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_button_number"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/stringEqually"
                android:textColor="@color/orange"
                android:textSize="@dimen/key_text_size" />
        </TableRow>
        @+id/buttonEqually
    </TableLayout>
</LinearLayout>
